2008-04-21  Eitan Isaacson  <eitan@ascender.com>

	* NEWS: 
	* confugure.in:
	* README: Updated to version 1.3.1.

	* pyreqs.py: Check that the version of pyatspi is current enough.

2008-04-21  Brian G. Merrell  <bgmerrell@gmail.com>

	* src/lib/accerciser/accerciser.py:  Added whitespace to strings (bug
	#528261).

2008-03-26  Eitan Isaacson  <eitan@ascender.com>

	* plugins/validate.glade:
	* plugins/validate.py: Implement save functionality, 
	thanks Brian Merrell! (bug #508665). Added an extra column 
	to the append in _exceptionError()'s append to model.

2008-03-16  Eitan Isaacson  <eitan@ascender.com>

	* plugins/quick_select.py: Make it work better with tab lists 
	and windows.

2008-03-07  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* plugins/interface_view.py: Added some translator
	comments.

2008-03-05  Eitan Isaacson  <eitan@ascender.com>

	* src/lib/accerciser/plugin/plugin_manager.py: Added translator
	comments for "View" (bug #520296).

	* plugins/interface_view.py: Removed prefix space from
	translatable string (bug #514232).

	* src/lib/accerciser/accessible_treeview.py: 
	* plugindata/validate/basic.py: 
	* plugins/interface_view.glade: Added translator comments.

2008-02-28  Eitan Isaacson  <eitan@ascender.com>

	* plugins/event_monitor.glade: Move the separator directly beneath 
	the text window (bug #494634). Thanks Brian G. Merrell!

	* plugins/event_monitor.py: Make hyperlinks work with single
	clicks (bug #494632). Thanks Steve Lee and Brian G. Merrell!
	* plugins/api_view.py: Put interface combo box on tob (bug
	#493650). Thanks Brian G. Merrell!
	* plugins/interface_view.py: Swapped absolute and relative
	positions in Component section (bug #503654).
	
2008-02-10  Eitan Isaacson  <eitan@ascender.com>

	* src/lib/accerciser/Makefile.am: Removed pyatspi.zip
	* NEWS:
	* README: 
	* configure.in: 
	* debian/changelog: 1.1.91 release.

2008-02-08  Eitan Isaacson  <eitan@ascender.com>

	* src/lib/accerciser/pyatspi.zip: Deleted.
