@@ -1,3 +1,9 @@
+2008-04-22  Brian G. Merrell  <bgmerrell@gmail.com>
+
+	* plugins/ipython_view.py:  modified the code to check for different 
+	modifiers (CONTROL, SHIFT, and MOD1/ALT) and correct the behavior of
+	the 'Home' key to perform as the user would expect (bug #431882).
+
 2008-04-21  Eitan Isaacson  <eitan@ascender.com>
 
 	* NEWS: 
